@@ -1,3 +1,8 @@
+2008-06-27	Diego Ongaro <ongardie@gmail.com>
+
+	* configure.in.in: Drop unused dependency on dbus, update maintainer
+	email address.
+
 2008-06-26	Diego Ongaro <ongardie@gmail.com>
 
 	* panel-plugin/datetime.c: Really fix Bug #4157 - update interval
